fix spacing on workspaces

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -35,7 +35,7 @@ button:hover {
 }
 
 #workspaces button {
-    padding: 0 4px;
+    padding: 0 10px;
 }
 
 #workspaces button.focused {
